WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
66644
Fix build error when inspector is disabled.
https://bugs.webkit.org/show_bug.cgi?id=66644
Summary
Fix build error when inspector is disabled.
Gyuyoung Kim
Reported
2011-08-21 23:21:16 PDT
There is a build break when INSPECTOR is disabled. I think InspectorDatabaseResource.h should use ENABLE(INSPECTOR) macro as well as InspectorDatabaseResource.cpp. Scanning dependencies of target webcore_efl [ 8%] [ 8%] Building CXX object WebCore/CMakeFiles/webcore_efl.dir/inspector/InspectorDatabaseResource.cpp.o Building CXX object WebCore/CMakeFiles/webcore_efl.dir/inspector/InspectorDatabaseAgent.cpp.o In file included from /home/gyuyoung/webkit/WebKit/Source/JavaScriptCore/wtf/CrossThreadRefCounted.h:35:0, from /home/gyuyoung/webkit/WebKit/Source/JavaScriptCore/wtf/text/StringImpl.h:28, from /home/gyuyoung/webkit/WebKit/Source/JavaScriptCore/wtf/text/WTFString.h:28, from /home/gyuyoung/webkit/WebKit/Source/WebCore/platform/text/PlatformString.h:28, from /home/gyuyoung/webkit/WebKit/build/DerivedSources/WebCore/InspectorFrontend.h:7, from /home/gyuyoung/webkit/WebKit/Source/WebCore/inspector/InspectorDatabaseResource.h:36, from /home/gyuyoung/webkit/WebKit/Source/WebCore/inspector/InspectorDatabaseResource.cpp:32: /home/gyuyoung/webkit/WebKit/Source/JavaScriptCore/wtf/PassRefPtr.h: In function ‘void WTF::derefIfNotNull(T*) [with T = WebCore::Database]’: /home/gyuyoung/webkit/WebKit/Source/JavaScriptCore/wtf/RefPtr.h:143:9: instantiated from ‘WTF::RefPtr<T>& WTF::RefPtr<T>::operator=(const WTF::PassRefPtr<T>&) [with T = WebCore::Database]’ /home/gyuyoung/webkit/WebKit/Source/WebCore/inspector/InspectorDatabaseResource.h:52:68: instantiated from here /home/gyuyoung/webkit/WebKit/Source/JavaScriptCore/wtf/PassRefPtr.h:59:13: error: invalid use of incomplete type ‘struct WebCore::Database’ /home/gyuyoung/webkit/WebKit/Source/WebCore/inspector/InspectorDatabaseResource.h:43:7: error: forward declaration of ‘struct WebCore::Database’ make[2]: *** [WebCore/CMakeFiles/webcore_efl.dir/inspector/InspectorDatabaseResource.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... make[1]: *** [WebCore/CMakeFiles/webcore_efl.dir/all] Error 2 make: *** [all] Error 2
Attachments
Proposed Patch
(1.05 KB, patch)
2011-08-21 23:22 PDT
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2011-08-21 23:22:17 PDT
Created
attachment 104646
[details]
Proposed Patch
WebKit Review Bot
Comment 2
2011-08-22 10:50:09 PDT
Comment on
attachment 104646
[details]
Proposed Patch Clearing flags on attachment: 104646 Committed
r93516
: <
http://trac.webkit.org/changeset/93516
>
WebKit Review Bot
Comment 3
2011-08-22 10:50:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug