Fix build error when inspector is disabled. https://bugs.webkit.org/show_bug.cgi?id=66644

Reviewed by Darin Adler.

* inspector/InspectorDatabaseResource.h: Add ENABLE(INSPECTOR) macro.


Canonical link: https://commits.webkit.org/82498@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93516 268f45cc-cd09-0410-ab3c-d52691b4dbfc